{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 27,
  "lineage": "c12da5b0-ae23-91ef-58d7-f3514708e2f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gorra_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:778425189746:instance/i-07e751b1c37204d42",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-role-ecr-access",
            "id": "i-07e751b1c37204d42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gorra-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ad3e93a810723ca2",
            "private_dns": "ip-10-0-1-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.231",
            "public_ip": "52.73.153.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08f16fa8feee87a26",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d6e304446844c4e",
            "tags": {
              "Name": "gorra_backend",
              "Project": "GORRA"
            },
            "tags_all": {
              "Name": "gorra_backend",
              "Project": "GORRA"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09eddebced79594b7"
            ]
          },
          "dependencies": [
            "aws_security_group.gorra_sg",
            "aws_subnet.gorra_public_subnet",
            "aws_vpc.gorra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gorra_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778425189746:internet-gateway/igw-0a90b83fcf41f502f",
            "id": "igw-0a90b83fcf41f502f",
            "owner_id": "778425189746",
            "tags": {
              "Name": "gorra-igw"
            },
            "tags_all": {
              "Name": "gorra-igw"
            },
            "vpc_id": "vpc-05bdc541252a30a74"
          },
          "dependencies": [
            "aws_vpc.gorra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gorra_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778425189746:route-table/rtb-0a4a58bc7d6539772",
            "id": "rtb-0a4a58bc7d6539772",
            "owner_id": "778425189746",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a90b83fcf41f502f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gorra-route-table"
            },
            "tags_all": {
              "Name": "gorra-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bdc541252a30a74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gorra_igw",
            "aws_vpc.gorra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gorra_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3edecaa1ff77b30",
            "route_table_id": "rtb-0a4a58bc7d6539772",
            "subnet_id": "subnet-03d6e304446844c4e"
          },
          "dependencies": [
            "aws_internet_gateway.gorra_igw",
            "aws_route_table.gorra_route_table",
            "aws_subnet.gorra_public_subnet",
            "aws_vpc.gorra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gorra_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778425189746:security-group/sg-09eddebced79594b7",
            "description": "Security group for web app Gorra",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09eddebced79594b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "190.195.209.92/32"
                ],
                "description": "Allow SSH from a specific IP address",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "gorra-sg",
            "name_prefix": "",
            "owner_id": "778425189746",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gorra-sg"
            },
            "tags_all": {
              "Name": "gorra-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bdc541252a30a74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gorra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gorra_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778425189746:subnet/subnet-03d6e304446844c4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d6e304446844c4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "778425189746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gorra-public-subnet"
            },
            "tags_all": {
              "Name": "gorra-public-subnet"
            },
            "vpc_id": "vpc-05bdc541252a30a74"
          },
          "dependencies": [
            "aws_vpc.gorra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gorra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:778425189746:vpc/vpc-05bdc541252a30a74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0445d6d3994507358",
            "default_route_table_id": "rtb-0d238612de215d4e8",
            "default_security_group_id": "sg-05eed0e6f3d6ac28d",
            "dhcp_options_id": "dopt-0b0e26e56a80f0545",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05bdc541252a30a74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d238612de215d4e8",
            "owner_id": "778425189746",
            "tags": {
              "Name": "gorra-vpc"
            },
            "tags_all": {
              "Name": "gorra-vpc"
            }
          }
        }
      ]
    }
  ]
}